Made YouTube iframe responsive

--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/oi7KPDi_yQI" frameborder="0" allowfullscreen></iframe>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/oi7KPDi_yQI" frameborder="0"></iframe>
+                </div>
             </div>
             <div class="col-md-6">
                 <h2><a class="alt2-a" href="information.html">Epic Tribute To Star Wars And Queen</a></h2>
