Added fixes for mobile view

--- a/contact.html
+++ b/contact.html
@@ -250,7 +250,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 sm-2top">
                 <h2>Campus Information</h2>
                 <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d832.9392888863787!2d-111.9760848773156!3d33.37740548876065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd9cf1f2e9455327d!2sUniversity+of+Advancing+Technology!5e0!3m2!1sen!2sus!4v1395345786136" frameborder="0"></iframe>
                 <address>
@@ -367,6 +367,8 @@
         </div>
     </div>
 </footer>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
