--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <h2>News and Features</h2>
         </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 sm-news-block">
                 <img class="img-responsive" src="images/news/1.jpg" alt="">
                 <h2><a class="alt-a" href="information.html">UE4 - Derelict Ship</a></h2>
                 <p>"[UE4] - Derelict Ship" created in the Unreal Engine by UAT Game Art and Animation alum Blake Bjerke!</p>
@@ -154,7 +154,7 @@
                     <a href="information.html">Read Story <i class="fa fa-chevron-right"></i></a>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 sm-news-block">
                 <img class="img-responsive" src="images/news/2.jpg" alt="">
                 <h2><a class="alt-a" href="information.html">UAT's Greenlight</a></h2>
                 <p>It is a time for all students to "showoff" their projects they have worked on this past semester, while pitching their ideas for special topic classes in the Fall.</p>
@@ -162,7 +162,7 @@
                     <a href="information.html">Read Story <i class="fa fa-chevron-right"></i></a>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 sm-news-block">
                 <img class="img-responsive" src="images/news/3.jpg" alt="">
                 <h2><a class="alt-a" href="information.html">Phoenix Comicon DIY</a></h2>
                 <p>Phoenix Comicon DIY Goggles by Maker Tech Mike Syfritt of MadPropps.</p>
@@ -430,6 +430,8 @@
         </div>
     </div>
 </footer>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
