--- a/request-information.html
+++ b/request-information.html
@@ -568,6 +568,8 @@
         </div>
     </div>
 </footer>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
