--- a/request-information.html
+++ b/request-information.html
@@ -133,9 +133,9 @@
                 <p>
                     Do you wish to learn more about our certificate, graduate, professional, and adult degree completion programs? If you complete this form, we'll send you the latest news about your program of interest, including event invitations, current student and alumni profiles, and application process information. We will also connect you with a staff and faculty members who can help with your questions. We look forward to connecting with you.
                 </p>
-                <strong>
-                    * indicates a field required for us to communicate with you most effectively.
-                </strong>
+                <div class="p-section">
+                    <strong>* indicates a field required for us to communicate with you most effectively.</strong>
+                </div>
                 <form class="p-section">
                     <div class="col-md-6">
                         <div class="form-group">
