--- a/information.html
+++ b/information.html
@@ -285,7 +285,7 @@
                                             <td>$29,142</td>
                                         </tr>
                                         <tr>
-                                            <td>Private Education Loans</td>
+                                            <td><b>Private Education Loans</b></td>
                                             <td>$0</td>
                                         </tr>
                                         <tr>
