Fixed spelling error

--- a/information.html
+++ b/information.html
@@ -289,7 +289,7 @@
                                             <td>$0</td>
                                         </tr>
                                         <tr>
-                                            <td><b>Intitutional Financing Plans</b>
+                                            <td><b>Institutional Financing Plans</b>
                                             </td>
                                             <td>$0</td>
                                         </tr>
