--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - University of Advancing Technology</title>
-    <link href="css/tidy.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/tidy.css"/>
+
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
