--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - University of Advancing Technology</title>
 
-    <link rel="stylesheet" href="css/tidy.css"/>
+    <link rel="stylesheet" href="css/tidy.min.css"/>
 
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
